# privl1

./: .gitignore  COMMANDS_TO_RUN.txt  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  ROADMAP.md
crates/circuits/: Cargo.toml
crates/circuits/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: commitment.rs  hash.rs  keys.rs  lib.rs  merkle.rs  note.rs  nullifier.rs  point.rs  primitives.rs  proof.rs  scalar.rs
crates/dex/: Cargo.toml
crates/dex/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/nft/: Cargo.toml
crates/nft/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/pallets/simple-amm/: Cargo.toml
crates/pallets/simple-amm/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs
crates/zkvm/: Cargo.toml
crates/zkvm/src/: lib.rs
docs/: DEX_ADAPTATION.md  QUANTUM_RESISTANCE.md
puddel-dex-secure-clean/: .env.example  .gitattributes  .gitignore  .solhint.json  AUDIT_READY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_SECURITY.md  FRAME_SETUP.md  FRONTEND_STATUS.md  FUJI_DEPLOYMENT.md  GOVERNANCE_SIMPLIFICATION_IMPACT_REPORT.md  HUGGINGFACE_SETUP.md  LICENSE  NFT_CREATION_GUIDE.md  NFT_IMPLEMENTATION_STATUS.md  README.md  SECURE_API_SETUP.md  SECURE_DEPLOYMENT.md  SECURE_DEPLOYMENT_SOW.md  SECURE_SETUP_GUIDE.md  SECURITY.md  SECURITY_ASSESSMENT.md  SLITHER_TESTNET_AUDIT.md  TESTNET_DEPLOYMENT.md  TREZOR_DEPLOYMENT.md  WHITEPAPER.md  fix-syntax-errors.sh  hardhat.config.hardware.js  hardhat.config.js  load-secure-keys.sh  next.config.js  package.json  remove-console-logs.sh  setup-secure-env.sh  tailwind.config.js  tsconfig.json  vercel.json
puddel-dex-secure-clean/contracts/: PuddelFactory.sol  PuddelPair.sol  PuddelRouter.sol  veNFT.sol.unused
puddel-dex-secure-clean/contracts/access/: Ownable.sol
puddel-dex-secure-clean/contracts/config/: NetworkConfig.sol  PuddelConfig.sol
puddel-dex-secure-clean/contracts/core/: PeL.sol
puddel-dex-secure-clean/contracts/errors/: PuddelErrors.sol
puddel-dex-secure-clean/contracts/gauges/: Bribe.sol  Gauge.sol  Minter.sol  Voter.sol
puddel-dex-secure-clean/contracts/interfaces/: IBribe.sol  IFeeDistributor.sol  IGauge.sol  IMinter.sol  IPuddelFactory.sol  IPuddelPair.sol  IPuddelRouter.sol  IVoter.sol  IVotingEscrow.sol  IWAVAX.sol
puddel-dex-secure-clean/contracts/libraries/: PuddelLibrary.sol  SafeERC20.sol  SafeMath.sol
puddel-dex-secure-clean/contracts/nft/: PuddelCollectionFactory.sol  PuddelNFTAuction.sol  PuddelNFTMarketplace.sol  PuddelNFTVault.sol
puddel-dex-secure-clean/contracts/nft/implementations/: PuddelERC721.sol
puddel-dex-secure-clean/contracts/revenue/: FeeDistributor.sol
puddel-dex-secure-clean/contracts/security/: Pausable.sol  ReentrancyGuard.sol
puddel-dex-secure-clean/contracts/test/: MaliciousReentrant.sol  TestERC20.sol  TestSafeMath.sol
puddel-dex-secure-clean/contracts/utils/: InputValidator.sol
puddel-dex-secure-clean/contracts/ve/: VotingEscrow.sol
scripts/: push-to-github-manual.sh  setup-github.sh
