[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/consensus",
    "crates/network",
    "crates/state",
    "crates/contracts",
    "crates/zkvm",
    "crates/circuits",
    "crates/dex",
    "crates/nft",
    "crates/node",
    "crates/wallet",
    "crates/sdk",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
authors = ["PRIVL1 Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/privl1/privl1"
homepage = "https://privl1.org"
keywords = ["blockchain", "privacy", "zero-knowledge", "defi"]

[workspace.dependencies]
# Cryptography
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-bls12-381 = "0.4"
arkworks = "0.4"
blake3 = "1.5"
sha2 = "0.10"
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
pasta_curves = "0.5"

# Consensus & Networking
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.54", features = ["identify", "gossipsub", "kad", "noise", "yamux", "tcp", "dns", "websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.13"
tonic = "0.12"

# Storage
rocksdb = "0.22"
sled = "0.34"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
rand_core = "0.6"

# Testing
proptest = "1.5"
criterion = "0.5"
quickcheck = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

[profile.test-release]
inherits = "release"
opt-level = 2
lto = false