[package]
name = "pallet-simple-amm"
version = "0.1.0"
edition = "2021"
authors = ["puddlefarts"]
description = "Simple AMM pallet for PRIVL1 - ports PuddelPair constant product formula"

[dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

# Substrate FRAME dependencies (Latest stable v43 - all versions match)
frame-support = { version = "43", default-features = false }
frame-system = { version = "43", default-features = false }
sp-runtime = { version = "39", default-features = false }
sp-std = { version = "14", default-features = false }

[dev-dependencies]
sp-core = { version = "34" }
sp-io = { version = "38" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
